[gd_scene load_steps=7 format=3 uid="uid://dih8p4tk40hpv"]

[ext_resource type="Script" path="res://ratao.gd" id="1_0f2xq"]
[ext_resource type="Texture2D" uid="uid://ldsd4dxfr3ws" path="res://sprites/raton at (5).png" id="1_ynamb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qwx43"]
size = Vector2(33, 26)

[sub_resource type="Animation" id="Animation_piuck"]
resource_name = "rationes"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333, 0.666667, 0.8, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_xyh1i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d6j1j"]
_data = {
"RESET": SubResource("Animation_xyh1i"),
"rationes": SubResource("Animation_piuck")
}

[node name="ratao" type="CharacterBody2D"]
position = Vector2(-1, 0)
collision_layer = 3
collision_mask = 3
platform_floor_layers = 4294967043
platform_wall_layers = 3
script = ExtResource("1_0f2xq")

[node name="collision" type="CollisionShape2D" parent="."]
light_mask = 3
visibility_layer = 3
position = Vector2(-5.5, -14)
shape = SubResource("RectangleShape2D_qwx43")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(-1, -27)
texture = ExtResource("1_ynamb")
hframes = 3
vframes = 3

[node name="attack_point1" type="Marker2D" parent="sprite"]
position = Vector2(3, 9)

[node name="attack_point2" type="Marker2D" parent="sprite"]
position = Vector2(-5, 10)

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d6j1j")
}

[node name="anim_tree" type="AnimationTree" parent="."]

[node name="1cooldown" type="Timer" parent="."]

[node name="2cooldown" type="Timer" parent="."]

[node name="wall_detec" type="RayCast2D" parent="."]
light_mask = 3
visibility_layer = 3
position = Vector2(-1, -13)
target_position = Vector2(24, 0)
collision_mask = 2
collide_with_areas = true
